--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,9 @@
 
 @import 'normalize';
 
+$red: #a30a1c ;
+$yellow: #d99c37 ;
+
 * {
 	box-sizing: border-box;
 }
@@ -15,4 +18,117 @@ body {
 	font-size: 1.6rem;
 	color: #333;
 	min-height: 100%;
+}
+
+.grid {
+	height: 100vh;
+	display: grid;
+	grid-template-columns: repeat(16, 1fr);
+	grid-gap: 10px; 
+	margin: 10px 0;
+}
+
+.image-box {
+	background-color: #eee;
+	position: relative;
+	overflow: hidden;
+	&.v1 {
+		grid-column: 1/16;
+		grid-row: 2/11;
+	}
+	&.v2 {
+		grid-column: 1/17;
+		grid-row: 1/6;
+	}
+	&.v3 {
+		grid-column: 1/17;
+		grid-row: 6/11;
+	}
+	&.v4 {
+		grid-column: 1/9;
+		grid-row: 1/7;
+	}
+	&.v5 {
+		grid-column: 9/17;
+		grid-row: 1/7;
+	}
+	&.v6 {
+		grid-column: 1/17;
+		grid-row: 7/11;
+	}
+}
+
+.text-box {
+	background-color: #111d1d;
+	padding: 40px;
+	position: relative;
+	&.v1 {
+		grid-column: 8/17;
+		grid-row: 1/7;
+	}
+	&.v2 {
+		grid-column: 2/15;
+		grid-row: 5/7;
+	}
+	&.v3 {
+		grid-column: 2/8;
+		grid-row: 8/10;
+	}
+}
+
+img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	min-width: 100%;
+	min-height: 100%;
+}
+
+h1 {
+	color: $red;
+	font-size: 2.4rem;
+	margin: 0;
+}
+
+h2 {
+	color: $yellow;
+	font-size: 2.4rem;
+	margin: 0;
+}
+
+.events {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: flex-end;
+}
+
+.event {
+	color: #fff;
+	margin: 1.5em 0;
+	width: 47%;
+	&__number {
+		font-size: 3em;
+		font-weight: 700;
+		line-height: 1;
+	}
+	&__langs {
+		&--column {
+			display: flex;
+			justify-content: space-between;
+			align-items: flex-end;
+		}
+	}
+	&__lang {
+		border-bottom: 2px solid $red;
+		font-size: .8em;
+		padding: 10px 0;
+		& + & {
+			border-color: $yellow;
+		}
+		.event__langs--column & {
+			width: 46%;
+		}
+	}
 }
